JVM version conflict in Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
-language: node_js
-node_js:
-  - v7
-  - v6
-  - v5
-  - v4
+language: java
+
+jdk:
+  - oraclejdk8
+
+env:
+  - NODE_VERSION=6.2
+
+install:
+  - nvm install $NODE_VERSION
+  - npm install
+
+script:
+  - nvm use $NODE_VERSION
+  - npm test
