--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chromedriver": "^2.27.2",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
+    "coveralls": "^2.13.0",
     "cross-env": "^3.1.4",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.26.1",
@@ -59,6 +60,7 @@
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "nightwatch": "^0.9.12",
     "node-sass": "^4.5.2",
     "opn": "^4.0.2",
